--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(arm_sandbox)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(arm_sandbox main.cpp)
+add_executable(arm_sandbox main.cpp
+        disassembly/A64Decoder.cpp
+        disassembly/A64Decoder.h
+)
