--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,4 +40,6 @@ add_executable(arm_sandbox main.cpp
         disassembly/instructions/loads_and_stores/LoadStoreRegUnsignedImm.cpp
         emulation/executors/loads_and_stores/LoadStoreRegUnsignedImm.cpp
         emulation/executors/loads_and_stores/LoadStoreRegUnsignedImm.h
+        emulation/exceptions/FeatureFpNotImplemented.cpp
+        emulation/exceptions/FeatureFpNotImplemented.h
 )
