--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,5 @@ add_executable(arm_sandbox main.cpp
         emulation/executors/loads_and_stores/LoadStoreRegUnsignedImm.h
         emulation/exceptions/FeatureFpNotImplemented.cpp
         emulation/exceptions/FeatureFpNotImplemented.h
+        disassembly/instructions/IndexingMode.h
 )
