Create a helper function for load/store indexing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,4 +43,5 @@ add_executable(arm_sandbox main.cpp
         emulation/exceptions/FeatureFpNotImplemented.cpp
         emulation/exceptions/FeatureFpNotImplemented.h
         disassembly/instructions/IndexingMode.h
+        disassembly/instructions/loads_and_stores/indexing_helper.h
 )
