Make all executors derive from a template class
This allows to not repeat the same exact implementation of decodeAndExecute for every executor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,4 +48,5 @@ add_executable(arm_sandbox main.cpp
         loaders/elf/ElfLoader.cpp
         emulation/CpuStack.h
         emulation/CpuStack.cpp
+        emulation/executors/ExecutorBase'.h
 )
