Add UnconditionalBranchRegister inst. struct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,4 +49,6 @@ add_executable(arm_sandbox main.cpp
         emulation/CpuStack.h
         emulation/CpuStack.cpp
         emulation/executors/ExecutorBase'.h
+        disassembly/instructions/begsi/UnconditionalBranchRegister.h
+        disassembly/instructions/begsi/UnconditionalBranchRegister.cpp
 )
