Make UnconditionalBranchImmediateExecutor derive from BranchingExecutor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,4 +51,5 @@ add_executable(arm_sandbox main.cpp
         emulation/executors/ExecutorBase'.h
         disassembly/instructions/begsi/UnconditionalBranchRegister.h
         disassembly/instructions/begsi/UnconditionalBranchRegister.cpp
+        emulation/executors/BranchingExecutor.h
 )
