Add the DummyNamePrinter framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,8 @@ add_executable(arm_sandbox main.cpp
         emulation/executors/BranchingExecutor.h
         emulation/executors/UnconditionalBranchRegisterExecutor.h
         emulation/executors/UnconditionalBranchRegisterExecutor.cpp
+        emulation/libraries/DummyNamePrinter.cpp
+        emulation/libraries/DummyNamePrinter.h
         emulation/libraries/Mapper.cpp
         emulation/libraries/Mapper.h
         emulation/reserved_calls.h
