Make the DummyNamePrinter derive from the EmulatedSymbol class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,4 +64,5 @@ add_executable(arm_sandbox main.cpp
         emulation/executors/reserved/ReservedCallExecutor.h
         emulation/executors/reserved/ReservedCallExecutor.cpp
         emulation/emul_registers.h
+        emulation/libraries/EmulatedSymbol.h
 )
