--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(arm_sandbox)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(hello_world samples/hello_world/main.cpp)
+add_executable(file_read samples/file_read/main.cpp)
 
 add_executable(arm_sandbox main.cpp
         disassembly/A64Decoder.cpp
