--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,4 +96,5 @@ add_executable(arm_sandbox main.cpp
         emulation/libraries/libc/FScanF.cpp
         emulation/libraries/libc/FScanF.h
         emulation/executors/all_executors.h
+        loaders/elf/elf-windows.h
 )
