Create a log level enum

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,4 +98,12 @@ add_executable(arm_sandbox main.cpp
         emulation/executors/all_executors.h
         loaders/elf/elf-windows.h
         loaders/elf/elf-multiplatform.h
+        logging/LoggerBase.h
+        logging/StdoutLogger.cpp
+        logging/StdoutLogger.h
+        logging/LoggerFactory.h
+        logging/NullStream.h
+        logging/NullStream.cpp
+        logging/LogLevel.h
+        logging/LoggerBase.cpp
 )
