Add the AddSubExtendedRegister struct def

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,4 +123,5 @@ add_executable(arm_sandbox main.cpp
         disassembly/instructions/data_proc_imm/LogicalImmediate.cpp
         emulation/executors/data_proc_imm/LogicalImmediateExecutor.cpp
         emulation/executors/data_proc_imm/LogicalImmediateExecutor.h
+        disassembly/instructions/data_proc_register/AddSubExtendedRegister.h
 )
