--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,7 @@ add_executable(arm_sandbox main.cpp
         emulation/executors/data_proc_imm/LogicalImmediateExecutor.cpp
         emulation/executors/data_proc_imm/LogicalImmediateExecutor.h
         disassembly/instructions/data_proc_register/AddSubExtendedRegister.h
+        disassembly/instructions/data_proc_register/AddSubExtendedRegister.cpp
         emulation/exceptions/InstructionUnallocatedError.h
         emulation/exceptions/InstructionUnallocatedError.cpp
 )
