Initialize the System V stack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,4 +134,5 @@ add_executable(arm_sandbox main.cpp
         disassembly/instructions/loads_and_stores/LoadStoreReg.cpp
         emulation/executors/loads_and_stores/LoadStoreRegExecutor.h
         emulation/executors/loads_and_stores/LoadStoreRegExecutor.cpp
+        emulation/systemv_abi.h
 )
