Add NEON registers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,4 +141,7 @@ add_executable(arm_sandbox main.cpp
         disassembly/instructions/begsi/CompareAndBranchImmediate.cpp
         emulation/executors/begsi/CompareAndBranchImmediateExecutor.h
         emulation/executors/begsi/CompareAndBranchImmediateExecutor.cpp
+        emulation/simd/NeonExtension.h
+        emulation/simd/NeonExtension.cpp
+        utils/bit_utils.h
 )
