Start implementing Adv. SIMD copy executor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,6 +143,8 @@ add_executable(arm_sandbox main.cpp
         emulation/executors/begsi/CompareAndBranchImmediateExecutor.cpp
         disassembly/instructions/data_proc_simd/AdvancedSimdCopy.h
         disassembly/instructions/data_proc_simd/AdvancedSimdCopy.cpp
+        emulation/executors/data_proc_simd/AdvancedSimdCopyExecutor.h
+        emulation/executors/data_proc_simd/AdvancedSimdCopyExecutor.cpp
         emulation/simd/NeonExtension.h
         emulation/simd/NeonExtension.cpp
         utils/bit_utils.h
