Move instruction type and decoding functions out of A64Decoder.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,4 +148,7 @@ add_executable(arm_sandbox main.cpp
         emulation/simd/NeonExtension.h
         emulation/simd/NeonExtension.cpp
         utils/bit_utils.h
+        disassembly/instruction_type.h
+        disassembly/decoder_utils.h
+        disassembly/decoder_utils.cpp
 )
