Move decode_data_processing_register_type out of A64Decoder.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,4 +157,6 @@ add_executable(arm_sandbox main.cpp
         disassembly/data_processing_imm.h
         disassembly/branches_exc_sys.cpp
         disassembly/branches_exc_sys.h
+        disassembly/data_processing_register.cpp
+        disassembly/data_processing_register.h
 )
