Move decode_load_and_store_type out of A64Decoder.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,4 +159,6 @@ add_executable(arm_sandbox main.cpp
         disassembly/branches_exc_sys.h
         disassembly/data_processing_register.cpp
         disassembly/data_processing_register.h
+        disassembly/load_and_store.cpp
+        disassembly/load_and_store.h
 )
